# IPO-TRACKER

./: .gitignore  README.md  docker-compose.yml
client/: next.config.js  package-lock.json  package.json  tailwind.config.js
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/admin/: layout.tsx  page.tsx
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/app/login/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/dashboard/: AddMemberDialog.tsx  AdminMetricCard.tsx  AllotmentTable.tsx  MemberCard.tsx  StatusBadge.tsx
client/src/components/providers/: AuthProvider.tsx
client/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  separator.tsx  skeleton.tsx  table.tsx  textarea.tsx
client/src/lib/: axios.ts  utils.ts
client/src/store/: authStore.ts  ipoStore.ts
server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
server/app/: main.py
server/app/api/: __init__.py
server/app/api/v1/: admin.py  auth.py  user.py
server/app/broker/: consumer.py  publisher.py
server/app/core/: auth.py  config.py  db.py
server/app/models/: __init__.py  allotment.py  ipo.py  member.py  user.py
server/app/registrars/: base.py  cameo.py
server/app/repositories/: allotment_repo.py  ipo_repo.py  member_repo.py  user_repo.py
server/app/schemas/: allotment.py  ipo.py  member.py  schema.sql  user.py
server/app/services/: allotment_service.py  ipo_service.py  user_service.py
server/app/workers/: allotment_worker.py  coordinator.py  test_cameo.py
