[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "opencv-python>=4.13.0.92",
    "passlib[bcrypt]>=1.7.4",
    "pika>=1.4.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
